--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,85 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700&display=swap');
+html, body {
+     height: 100%;
+     scroll-behavior: smooth;
+}
+body { 
+    margin: 0; 
+    padding: 0;
+    font-family: Raleway, "Helvetica Neue", sans-serif; 
+    box-sizing: border-box;
+    // overflow: hidden;
+}
+.container{
+    width: 95%;
+    margin: 0 auto;
+}
+.container-fluid{
+    width: 100%;
+}
+.sticky-header{
+    position: fixed;
+    /* top: 0; */
+    height: 50px;
+    width: 100%;
+    /* background-color: #ffffff; */
+    /* background-color: #e6eaed; */
+    z-index: 100;
+}
+.after-sticky-header {
+    margin-top: 50px;
+}
+
+h1, h2, h3, h4, h5, h6 { font-weight: bold; }
+
+h1, h2, h3, h4, h5, h6 { color: #444 }
+
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color: #444 }
+
+h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover { color: #f15a23 }
+
+h2, h3, h4, h5, h6 { margin: 30px 0 20px; font-weight: 600; }
+
+h1 { font-size: 24px; margin: 0 0 10px; }
+
+h2 { font-size: 18px; margin: 0; padding: 0}
+
+h3 { font-size: 16px }
+
+h4 { font-size: 14px }
+
+h5 { font-size: 12px }
+
+h6 { font-size: 11px }
+
+ul{ padding: 0; margin: 0}
+ul li{text-decoration: none; list-style: none;}
+
+p { margin: 0px }
+
+p img { margin: 0 }
+
+p.lead { font-size: 21px; line-height: 27px; color: #777; }
+
+em { font-style: italic }
+
+strong { font-weight: bold }
+
+small { font-size: 80% }
+
+hr { border: solid rgba(0, 0, 0, 0.2); border-width: 1px 0 0; clear: both; margin: 10px 0 30px; height: 0; }
+
+p a, p a:visited { line-height: inherit }
+
+a:link { text-decoration: none }
+
+a:focus { outline: 0 }
+
+a { outline: 0 }
+
+p a, p a:visited { line-height: inherit }
+
+a:link { text-decoration: none; }
+/* a { color: #f15a23; } */
+a:hover { color: #f15a23; opacity: 0.8; }
